<resources>
    <string name="app_name">The blooming skyline</string>
    <string name="acc">Создайте аккаунт</string>
    <string name="emailHint">Введите email</string>
    <string name="pass">Введите пароль</string>
    <string name="repass">Повторите пароль</string>
    <string name="button1">Зарегистрироваться</string>
    <string name="textBottom">Уже есть аккаунт, войти</string>
    <string name="sing">Войдите в аккаунт</string>
    <string name="button2">Войти</string>
    <string name="button3">Отправить ещё письмо</string>
    <string name="count_item">Количество:</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="remove">Удалить</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="hint_free">Бесплатная стандартная доставка | 3-4 дня</string>
    <string name="visa_1234">Visa *1234</string>
    <string name="promos">Введите промокод</string>
    <string name="adddress">Введите адрес доставки</string>
    <string name="place_an_order">Оформить заказ</string>
    <string name="summ">Сумма: 0.00</string>
    <string name="exit">Выйти</string>
    <string name="my_orders">Мои заказы</string>
    <string name="save_data">Сохранить данные</string>
    <string name="name">ИМЯ</string>
    <string name="last_name">ФАМИЛИЯ</string>
    <string name="gender">Пол</string>
    <string name="phone">Телефон</string>
    <string name="card_number">Номер карты</string>
    <string name="M">М</string>
    <string name="W">Ж</string>
    <string name="order_structure">Состав заказа:</string>
</resources>