<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".RegActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/carattere"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="17"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/salmon"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/acc"
        android:textColor="@color/brown"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/brown"
        android:hint="@string/emailHint" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/brown"
        android:hint="@string/pass" />

    <EditText
        android:id="@+id/user_pass_repeat"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/brown"
        android:hint="@string/repass" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:layout_marginTop="15dp"
        android:text="@string/button1"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aboreto"
        android:text="@string/textBottom"
        android:textColor="@color/brown"
        android:textSize="15sp" />

</LinearLayout>