<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".Profile">


    <Button
        android:id="@+id/button_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green"
        android:gravity="center_vertical"
        android:text="@string/button2"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/green"
        android:text="@string/exit"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardAddGAD" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:backgroundTint="@color/green"
        android:text="@string/button1"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardAddGAD" />

    <Button
        android:id="@+id/button_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/my_orders"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/ButtonForSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/FirstNameGAD"
        android:layout_width="290px"
        android:layout_height="100px"
        android:text="@string/name"
        android:layout_marginTop="50dp"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LastNameGAD"
        android:layout_width="290px"
        android:layout_height="100px"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameGAD" />

    <TextView
        android:id="@+id/GenderGAD"
        android:layout_width="290px"
        android:layout_height="100px"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameGAD" />

    <TextView
        android:id="@+id/PhoneGAD"
        android:layout_width="290px"
        android:layout_height="100px"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenderGAD" />

    <TextView
        android:id="@+id/CardGAD"
        android:layout_width="290px"
        android:layout_height="100px"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/card_number"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneGAD" />

    <EditText
        android:id="@+id/NameAddGAD"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:textColor="@color/brown"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/FirstNameGAD"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastNameAddGAD"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/brown"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/LastNameGAD"
        app:layout_constraintTop_toBottomOf="@+id/NameAddGAD" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginTop="20dp"
        android:textColor="@color/brown"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/GenderGAD"
        app:layout_constraintTop_toBottomOf="@+id/LastNameAddGAD">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/M"
            android:textColor="@color/brown"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/W"
            android:textColor="@color/brown"/>
    </RadioGroup>

    <EditText
        android:id="@+id/PhoneAddGAD"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/brown"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/PhoneGAD"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <EditText
        android:id="@+id/CardAddGAD"
        android:layout_width="600px"
        android:layout_height="100px"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/brown"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/CardGAD"
        app:layout_constraintTop_toBottomOf="@+id/PhoneAddGAD" />

    <Button
        android:id="@+id/ButtonForSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/save_data"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/salmon"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="31dp">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_home"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_catalog"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_basket"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_profile"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>